<resources>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="username">用户名</string>
    <string name="login">登&#160;&#160;&#160;&#160;录</string>
    <string name="app_name">SPS蓝牙版</string>
    <string name="tab1">2.0车位检测器</string>
    <string name="tab2">2.0车位网关</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索蓝牙设备</string>
    <string name="disconnect">断开</string>
    <string name="string1">设备唯一ID：</string>
    <string name="string2">传感器ID：</string>
    <string name="string3">网关ID：</string>
    <string name="string4">车位类型：</string>
    <string name="string5">心跳间隔：</string>
    <string name="string6">2~60min</string>
    <string name="string7">读取</string>
    <string name="string8">配置</string>
    <string name="string9">重启</string>
    <string name="string10">激活</string>
    <string name="string11">退出配置</string>
    <string name="string12">退出</string>
    <string name="string13">恢复出厂设置</string>
    <string name="string14">清屏</string>
    <string name="string15">唤醒</string>
    <string name="string16">休眠时间：</string>
    <string name="string17">0~15/2sec</string>
    <string name="string18">选择文件</string>
    <string name="string19">灵敏度：</string>
    <string name="string20">省：</string>
    <string name="string21">市：</string>
    <string name="string22">区：</string>
    <string name="string23">街道：</string>
    <string name="string24">停车点：</string>
    <string name="string25">泊位点：</string>
    <string name="string26">IP：</string>
    <string name="string27">端口：</string>
    <string name="copy_id">复制ID</string>
    <string name="change_frequency">更改频点</string>
    <string name="gap_time_nb">1~240min</string>
    <string name="select_frequency">选频点</string>
    <string name="end_config">退出配置</string>
    <string name="update">升级</string>
    <string name="isActive">未激活</string>
    <string name="net_id_20">网关ID：</string>
    <string name="province_20">省：</string>
    <string name="city_20">市：</string>
    <string name="area_20">区：</string>
    <string name="street_20">街道：</string>
    <string name="position_20">停车场：</string>
    <string name="ip_20">IP地址：</string>
    <string name="port_20">端口：</string>
    <string name="city_nb">城市：</string>
    <string name="area_nb">县区：</string>
    <string name="berthNum_nb">泊位：</string>
    <string name="update_net_20">升级</string>
    <string name="net_id_40">网关唯一ID：</string>
    <string name="ip_net_40">IP地址：</string>
    <string name="port_net_40">端口：</string>
    <string name="update_net_40">升级</string>
    <string name="menu_about">关于</string>
    <string name="menu_change_tools">切换工具</string>
    <string name="menu_register">注册</string>
    <string name="menu_login">登录</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">亲，应用缺少必要权限，将无法正常运行。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <string-array name="stop_bits">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="data_bits">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="parity">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
        <item >Mark</item>
        <item >Space</item>
    </string-array>

    <string-array name="flow_control">
        <item>None</item>
        <item>CTS/RTS</item>
    </string-array>


</resources>
