<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="#EBEBEB">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/string1"/>
        <TextView
            android:id="@+id/sensor_id"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2.5"
            android:gravity="center"
            android:textSize="15sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.7"
            android:textColor="@color/orange_color2"
            android:text="@string/copy_id"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/city_nb" />
        <EditText
            android:id="@+id/et_city"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_area"
            tools:ignore="LabelFor,NestedWeights" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/area_nb"/>
        <EditText
            android:id="@+id/et_area"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_position"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/berthNum_nb"/>
        <EditText
            android:id="@+id/et_position"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_ip1"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/string26"/>
        <EditText
            android:id="@+id/et_ip1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_ip2"
            tools:ignore="LabelFor,NestedWeights" />
        <EditText
            android:id="@+id/et_ip2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_ip3"
            tools:ignore="LabelFor" />
        <EditText
            android:id="@+id/et_ip3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_ip4"
            tools:ignore="LabelFor" />
        <EditText
            android:id="@+id/et_ip4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_port"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/string27"/>
        <EditText
            android:id="@+id/et_port"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2.5"
            android:maxLength="8"
            style="@style/editText_style"
            android:nextFocusForward="@+id/stop_time"
            tools:ignore="LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/string16"/>
        <EditText
            android:id="@+id/stop_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/gap_time"
            tools:ignore="LabelFor,NestedWeights" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/string17"/>
        <TextView
            android:id="@+id/tvChangeFre"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/change_frequency"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:textColor="@color/btn_font_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            tools:ignore="NestedWeights">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/string4" />
                <Spinner
                    android:id="@+id/car_put"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:entries="@array/car_put_array"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/string19" />
                <Spinner
                    android:id="@+id/lingMin"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:entries="@array/lingMin_array"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_active"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/isActive"
                android:gravity="center" />
            <TextView
                android:id="@+id/tv_FName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/string5"/>
        <EditText
            android:id="@+id/gap_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            style="@style/editText_style"
            tools:ignore="LabelFor,NestedWeights" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.5"
            android:text="@string/gap_time_nb"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/select_frequency"
            android:id="@+id/btn_point" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:text="@string/string14"/>
    </LinearLayout>


    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:scrollbarStyle="outsideOverlay"
        android:layout_weight="4"
        android:fadeScrollbars="false"
        android:focusableInTouchMode="true"
        android:gravity="left|center_vertical"
        tools:ignore="RtlHardcoded">
        <TextView
            android:id="@+id/tv_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/read_config"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:text="@string/string7"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/write_config"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:text="@string/string8"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/active"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:text="@string/string10"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:text="@string/string9"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <Button
            android:id="@+id/recovery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:text="@string/string13"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/end_config"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:id="@+id/btn_endConfig"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnUpdateNB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/update"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/end"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:text="@string/string12"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
