<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="#EBEBEB">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/city_nb"/>
        <EditText
            android:id="@+id/et_city"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_area"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/area_nb"/>
        <EditText
            android:id="@+id/et_area"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_position"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/berthNum_nb"/>
        <EditText
            android:id="@+id/et_position"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_ip1"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/string26"/>
        <EditText
            android:id="@+id/et_ip1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_ip2"/>
        <EditText
            android:id="@+id/et_ip2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_ip3"/>
        <EditText
            android:id="@+id/et_ip3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_ip4"/>
        <EditText
            android:id="@+id/et_ip4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/et_port"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/string27"/>
        <EditText
            android:id="@+id/et_port"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2.5"
            style="@style/editText_style"
            android:maxLength="8"
            android:nextFocusForward="@+id/stop_time"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/string16"/>
        <EditText
            android:id="@+id/stop_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            style="@style/editText_style"
            android:nextFocusForward="@+id/gap_time"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/string17"/>
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:gravity="center_vertical"-->
        <!--android:text="升级ID："/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/string4"/>
        <Spinner
            android:id="@+id/car_put"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:entries="@array/car_put_array"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/string19"/>
        <Spinner
            android:id="@+id/lingMin"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:entries="@array/lingMin_array"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/string5"/>
        <EditText
            android:id="@+id/gap_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            style="@style/editText_style"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.5"
            android:text="@string/string6"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:text="@string/string14"/>
    </LinearLayout>


    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:scrollbarStyle="outsideOverlay"
        android:layout_weight="4"
        android:fadeScrollbars="false"
        android:focusableInTouchMode="true"
        android:gravity="left|center_vertical">
        <TextView
            android:id="@+id/tv_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/write_config"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:layout_margin="2dp"
            android:text="@string/string8"/>

        <Button
            android:id="@+id/active"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:layout_margin="2dp"
            android:text="@string/string10"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:layout_margin="2dp"
            android:text="@string/string9"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/recovery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:layout_margin="2dp"
            android:text="@string/string13"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="退出配置"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:layout_margin="2dp"
            android:id="@+id/btn_endConfig" />

        <Button
            android:id="@+id/end"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button"
            android:textColor="@color/btn_font_color"
            android:layout_margin="2dp"
            android:text="@string/string12"/>
    </LinearLayout>

</LinearLayout>
